--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,5 +22,5 @@ jobs:
 
     - name: Run Tests
       run: |
-        gcc -O2 origc/match.c -o match
+        gcc -O2 cmd/matchc/match.c -o matchc
         go test -v
